# ScoutGameEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
App/: 3D_CubeDemo.cpp  Application.cpp  SimpleMain.cpp
Application/Src/: VariousMains.cpp  main.cpp  staticCompAndOscillator.cpp
Core/include/: Containers.h  Engine.h  EnumsAndFlags.h  Gizmos.h  Hash.h  InputManager.h  Material.h  Mesh.h  Model.h  PhysicsEngine.h  Renderer.h  ResourceManager.h  Resources.h  ResourcesAbstracts.h  Shader.h  Texture.h  Transform.h  VertexBuffer.h  globals.h  macros.h  utility.h
Core/source/: Containers.cpp  Engine.cpp  Gizmos.cpp  Hash.cpp  InputManager.cpp  Material.cpp  Mesh.cpp  Model.cpp  PhysicsEngine.cpp  Renderer.cpp  ResourceContainer.cpp  ResourceManager.cpp  Resources.cpp  Shader.cpp  Texture.cpp  Transform.cpp  VertexBuffer.cpp
Game/include/: Crawler.h  Map.h  Projectile.h
ScoutAssetSystem/: CMakeLists.txt
ScoutAssetSystem/Include/Scout/: IAssetSystem.h
ScoutAssetSystem/Include/Scout/DrWav/: WavIo.h
ScoutAssetSystem/Src/: IAssetSystem.cpp
ScoutAssetSystem/Src/DrWav/: WavIo.cpp
ScoutAudioEngine/: CMakeLists.txt
ScoutAudioEngine/Include/Scout/: AudioEffects.h  AudioMixing.h  IAudioEngine.h
ScoutAudioEngine/Include/Scout/Portaudio/: AudioEngine.h  Sound.h  TypedefAndEnum.h
ScoutAudioEngine/Src/: IAudioEngine.cpp
ScoutAudioEngine/Src/Portaudio/: AudioEngine.cpp  Sound.cpp
ScoutCommon/: CMakeLists.txt
ScoutCommon/Include/Scout/: Color.h  PreprocessorMacro.h  TypedefAndEnum.h
ScoutCommon/Src/: ScoutCommon.cpp
ScoutInputSystem/Include/Scout/: IInputSystem.h
ScoutInputSystem/Include/Scout/SdlInput/: TypedefAndEnum.h
ScoutMath/Include/Scout/: Math.h
ScoutUiSystem/Include/Scout/ImGuiSdlOpenGlRenderer/: UiSystem.h
Tool/: CheckProjectStructure.py  GenModuleCpp.py  README.md  TemplateScoutModule.txt
data/shaders/: albedoOnly.frag  albedoOnly.vert  blinnPhong.frag  blinnPhong.vert  blinnPhongNormalmapped.frag  blinnPhongNormalmapped.vert  gizmo.frag  gizmo.vert  gooch.frag  gooch.vert  quad.frag  quad.vert  textured.vert
